--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.3.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stream-io/node-sdk": "^0.3.0",
     "@stream-io/video-react-sdk": "^1.2.20",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
