--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.5",
     "postcss": "^8.4.41",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
